force-app/main/default/objects/Design_Brief__c/Design_Brief__c.object-meta.xml
<CustomObject>
    <description>Custom object to manage the details of the Design process</description>
    <label>Design Brief (SR-001 Rev 6)</label>
    <nameField>
        <label>Design Details Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Design Briefs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>