force-app/main/default/objects/Design_Brief__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Design Briefs (Account)</relationshipLabel>
    <relationshipName>Design_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>