force-app/main/default/objects/Design_Brief__c/fields/Alcohol_Content__c.field-meta.xml
<CustomField>
    <fullName>Alcohol_Content__c</fullName>
    <label>Alcohol Content</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>