force-app/main/default/objects/Design_Brief__c/fields/Assigned_to_Design_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_Design_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which Design team member has the job been assigned to.</inlineHelpText>
    <label>Assigned to Design Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Design_Details</relationshipName>
    <type>Lookup</type>
</CustomField>