force-app/main/default/objects/Design_Brief__c/fields/AutomationBypassDateTime__c.field-meta.xml
<CustomField>
    <fullName>AutomationBypassDateTime__c</fullName>
    <defaultValue>$System.OriginDateTime</defaultValue>
    <description>used for processing purposes to not trigger validation in flow
this is the start time for the Automation bypass date/ time</description>
    <label>AutomationBypassDateTime</label>
    <type>DateTime</type>
</CustomField>