force-app/main/default/objects/Design_Brief__c/fields/Blank_Audit_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Blank_Audit_Complete_Date__c</fullName>
    <formula>ISBLANK(  Line_Audit_Completed_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Blank Audit Complete Date</label>
    <type>Checkbox</type>
</CustomField>