force-app/main/default/objects/Design_Brief__c/fields/Capacity_Brimful_ml__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Brimful_ml__c</fullName>
    <label>Capacity Brimful (ml)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>