force-app/main/default/objects/Design_Brief__c/fields/Capacity_Fill_Point_mm__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Fill_Point_mm__c</fullName>
    <label>Capacity Fill Point (mm)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>