force-app/main/default/objects/Design_Brief__c/fields/Carbonated_Level_g_CO2_Vol__c.field-meta.xml
<CustomField>
    <fullName>Carbonated_Level_g_CO2_Vol__c</fullName>
    <label>Carbonated Level (g CO2/Vol)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>