force-app/main/default/objects/Design_Brief__c/fields/Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Comments_Notes__c</fullName>
    <inlineHelpText>This area is for the design team to input the estimated timeline and further comments</inlineHelpText>
    <label>Comments/Notes</label>
    <type>TextArea</type>
</CustomField>