force-app/main/default/objects/Design_Brief__c/fields/Competitor_s_Drawing_Attached__c.field-meta.xml
<CustomField>
    <fullName>Competitor_s_Drawing_Attached__c</fullName>
    <label>Competitor&apos;s Drawing Attached</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>