force-app/main/default/objects/Design_Brief__c/fields/Container_Description__c.field-meta.xml
<CustomField>
    <fullName>Container_Description__c</fullName>
    <label>Container Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>