force-app/main/default/objects/Design_Brief__c/fields/Costings_Completed_By_Commercial_Manager__c.field-meta.xml
<CustomField>
    <fullName>Costings_Completed_By_Commercial_Manager__c</fullName>
    <label>Costings Completed By Commercial Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>