force-app/main/default/objects/Design_Brief__c/fields/Customer_Filling_Site__c.field-meta.xml
<CustomField>
    <fullName>Customer_Filling_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Filling Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Design_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>