force-app/main/default/objects/Design_Brief__c/fields/Customer_Trial_Protocols_Attached__c.field-meta.xml
<CustomField>
    <fullName>Customer_Trial_Protocols_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Trial Protocols Attached</label>
    <type>Checkbox</type>
</CustomField>