force-app/main/default/objects/Design_Brief__c/fields/Date_Drawing_Required_By__c.field-meta.xml
<CustomField>
    <fullName>Date_Drawing_Required_By__c</fullName>
    <label>Date Drawing Required By</label>
    <type>Date</type>
</CustomField>