force-app/main/default/objects/Design_Brief__c/fields/Delivery_Date_For_24_Samples__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Date_For_24_Samples__c</fullName>
    <label>Delivery Date For 24 Samples</label>
    <type>Date</type>
</CustomField>