force-app/main/default/objects/Design_Brief__c/fields/Design_Brief_Number__c.field-meta.xml
<CustomField>
    <fullName>Design_Brief_Number__c</fullName>
    <description>previously this field was (255) TEXT</description>
    <label>Design Brief Number</label>
    <type>AutoNumber</type>
</CustomField>