force-app/main/default/objects/Design_Brief__c/fields/Design_Job_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Design_Job_Target_Date__c</fullName>
    <inlineHelpText>The date by which the Design Team expect the job will be finished.</inlineHelpText>
    <label>Design Job Target Date</label>
    <type>Date</type>
</CustomField>