force-app/main/default/objects/Design_Brief__c/fields/Drawing__c.field-meta.xml
<CustomField>
    <fullName>Drawing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Drawing</label>
    <referenceTo>Drawing__c</referenceTo>
    <relationshipLabel>Design Briefs</relationshipLabel>
    <relationshipName>Design_Briefs</relationshipName>
    <type>Lookup</type>
</CustomField>