force-app/main/default/objects/Design_Brief__c/fields/ETA_For_Customer_Trial_Protocols__c.field-meta.xml
<CustomField>
    <fullName>ETA_For_Customer_Trial_Protocols__c</fullName>
    <label>ETA For Customer Trial Protocols</label>
    <type>Date</type>
</CustomField>