force-app/main/default/objects/Design_Brief__c/fields/Existing_Packaging_Spec_Attached__c.field-meta.xml
<CustomField>
    <fullName>Existing_Packaging_Spec_Attached__c</fullName>
    <label>Existing Packaging Spec Attached</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Existing_Container__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes - I will attach it now</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>