force-app/main/default/objects/Design_Brief__c/fields/Filling_Site_Notes__c.field-meta.xml
<CustomField>
    <fullName>Filling_Site_Notes__c</fullName>
    <label>Filling Site Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>