force-app/main/default/objects/Design_Brief__c/fields/Filling_Temperature_Celcius__c.field-meta.xml
<CustomField>
    <fullName>Filling_Temperature_Celcius__c</fullName>
    <label>Filling Temperature (Celcius)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>