force-app/main/default/objects/Design_Brief__c/fields/Glass_Colour__c.field-meta.xml
<CustomField>
    <fullName>Glass_Colour__c</fullName>
    <label>Glass Colour</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Amber</fullName>
            </value>
            <value>
                <fullName>Mallaca</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Flint</fullName>
            </value>
            <value>
                <fullName>Autumn Leaf</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>