force-app/main/default/objects/Design_Brief__c/fields/Glass_Finish_Details__c.field-meta.xml
<CustomField>
    <fullName>Glass_Finish_Details__c</fullName>
    <label>Glass Finish Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>