force-app/main/default/objects/Design_Brief__c/fields/Horizontal_Bands__c.field-meta.xml
<CustomField>
    <fullName>Horizontal_Bands__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Horizontal Bands</label>
    <type>Checkbox</type>
</CustomField>