force-app/main/default/objects/Design_Brief__c/fields/Intermediate_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Tiers__c</fullName>
    <label>Intermediate Tiers</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PLP</fullName>
            </value>
            <value>
                <fullName>Cardboard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>