force-app/main/default/objects/Design_Brief__c/fields/IsAutomationByPassed__c.field-meta.xml
<CustomField>
    <fullName>IsAutomationByPassed__c</fullName>
    <description>AutomationBypassDateTime greater than 5 seconds</description>
    <formula>BLANKVALUE(AutomationBypassDateTime__c,  $System.OriginDateTime ) 
   &gt;   NOW()    -   0.00005787037 /*Five Seconds*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsAutomationByPassed?</label>
    <type>Checkbox</type>
</CustomField>