force-app/main/default/objects/Design_Brief__c/fields/Job_Accepted_by_Design_Team__c.field-meta.xml
<CustomField>
    <fullName>Job_Accepted_by_Design_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Job Accepted by Design Team</label>
    <type>Checkbox</type>
</CustomField>