force-app/main/default/objects/Design_Brief__c/fields/Label_Sizes__c.field-meta.xml
<CustomField>
    <fullName>Label_Sizes__c</fullName>
    <label>Label Sizes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>