force-app/main/default/objects/Design_Brief__c/fields/Label_Type__c.field-meta.xml
<CustomField>
    <fullName>Label_Type__c</fullName>
    <label>Label Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>PSL</fullName>
            </value>
            <value>
                <fullName>Sleeved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>