force-app/main/default/objects/Design_Brief__c/fields/Line_Audit_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Line_Audit_Completed_Date__c</fullName>
    <label>Line Audit Completed Date</label>
    <type>Date</type>
</CustomField>