force-app/main/default/objects/Design_Brief__c/fields/Link_to_trial_data_report__c.field-meta.xml
<CustomField>
    <fullName>Link_to_trial_data_report__c</fullName>
    <formula>HYPERLINK( &quot;https://encirc360.lightning.force.com/lightning/r/Report/00O4I0000055Q6QUAU/view?queryScope=userFolders&amp;fv0=&quot;+Drawing__r.Name, &quot;Link to trial data report&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link to trial data report</label>
    <type>Text</type>
</CustomField>