force-app/main/default/objects/Design_Brief__c/fields/Maximum_Pasteuriser_Temp_0c__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Pasteuriser_Temp_0c__c</fullName>
    <label>Maximum Pasteuriser Temp (0c)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>