force-app/main/default/objects/Design_Brief__c/fields/NPD_Request__c.field-meta.xml
<CustomField>
    <fullName>NPD_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NPD Request</label>
    <referenceTo>NPD_Request__c</referenceTo>
    <relationshipLabel>Design Briefs</relationshipLabel>
    <relationshipName>Design_Briefs</relationshipName>
    <type>Lookup</type>
</CustomField>