force-app/main/default/objects/Design_Brief__c/fields/Number_of_files_uploaded__c.field-meta.xml
<CustomField>
    <fullName>Number_of_files_uploaded__c</fullName>
    <label>Number of files uploaded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>