force-app/main/default/objects/Design_Brief__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The opportunity the design originated from.</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Design_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>