force-app/main/default/objects/Design_Brief__c/fields/Other_Colour__c.field-meta.xml
<CustomField>
    <fullName>Other_Colour__c</fullName>
    <description>Used with Glass_Colour__c field.</description>
    <label>Other (Colour)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>