force-app/main/default/objects/Design_Brief__c/fields/Pack_Height__c.field-meta.xml
<CustomField>
    <fullName>Pack_Height__c</fullName>
    <label>Pack Height</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tall</fullName>
            </value>
            <value>
                <fullName>Short</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>