force-app/main/default/objects/Design_Brief__c/fields/Pallet_Type__c.field-meta.xml
<CustomField>
    <fullName>Pallet_Type__c</fullName>
    <label>Pallet Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>EQ</fullName>
            </value>
            <value>
                <fullName>CHEP</fullName>
            </value>
            <value>
                <fullName>Red Pallets</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>