force-app/main/default/objects/Design_Brief__c/fields/Pasteurisation_Process__c.field-meta.xml
<CustomField>
    <fullName>Pasteurisation_Process__c</fullName>
    <label>Pasteurisation Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Flash</fullName>
            </value>
            <value>
                <fullName>Tunnel</fullName>
            </value>
            <value>
                <fullName>Retort</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>