force-app/main/default/objects/Design_Brief__c/fields/Production_Glass_Required_By__c.field-meta.xml
<CustomField>
    <fullName>Production_Glass_Required_By__c</fullName>
    <label>Production Glass Required By</label>
    <type>Date</type>
</CustomField>