force-app/main/default/objects/Design_Brief__c/fields/PU_Target__c.field-meta.xml
<CustomField>
    <fullName>PU_Target__c</fullName>
    <label>PU Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>