force-app/main/default/objects/Design_Brief__c/fields/Quality_Standards_Attached__c.field-meta.xml
<CustomField>
    <fullName>Quality_Standards_Attached__c</fullName>
    <label>Quality Standards Attached</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>New_Customer__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Yes - I&apos;ll attach them now</fullName>
                <default>true</default>
                <label>Yes - I&apos;ll attach them now</label>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>