force-app/main/default/objects/Design_Brief__c/fields/Refillable__c.field-meta.xml
<CustomField>
    <fullName>Refillable__c</fullName>
    <label>Refillable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>