force-app/main/default/objects/Design_Brief__c/fields/Set_Number__c.field-meta.xml
<CustomField>
    <fullName>Set_Number__c</fullName>
    <label>Set Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>