force-app/main/default/objects/Design_Brief__c/fields/Shroud__c.field-meta.xml
<CustomField>
    <fullName>Shroud__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shroud</label>
    <type>Checkbox</type>
</CustomField>