force-app/main/default/objects/Design_Brief__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Create design brief</fullName>
                <default>true</default>
                <label>Create design brief</label>
            </value>
            <value>
                <fullName>Create tech drawing</fullName>
            </value>
            <value>
                <fullName>Design review</fullName>
            </value>
            <value>
                <fullName>Customer tech review/approval</fullName>
            </value>
            <value>
                <fullName>Customer approval to progress to pilot moulds</fullName>
            </value>
            <value>
                <fullName>Pilot trials</fullName>
            </value>
            <value>
                <fullName>Pilot internal review</fullName>
            </value>
            <value>
                <fullName>Reports and samples to customer</fullName>
            </value>
            <value>
                <fullName>Customer review</fullName>
            </value>
            <value>
                <fullName>Customer tech approval</fullName>
            </value>
            <value>
                <fullName>Customer procurement approval to bulk tools</fullName>
            </value>
            <value>
                <fullName>On hold, awaiting additional information from Account Manager</fullName>
            </value>
            <value>
                <fullName>Project Dead</fullName>
            </value>
            <value>
                <fullName>NPD stopped; mould equipment was purchased</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>