force-app/main/default/objects/Design_Brief__c/fields/System_Generated__c.field-meta.xml
<CustomField>
    <fullName>System_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Design Process record was generated automatically (e.g. when an Opportunity reaches design stage).</description>
    <label>System Generated</label>
    <type>Checkbox</type>
</CustomField>