force-app/main/default/objects/Design_Brief__c/fields/Type_of_Design__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Design__c</fullName>
    <label>Type of Design</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Product</fullName>
            </value>
            <value>
                <fullName>Counter Spec</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>