force-app/main/default/objects/Design_Brief__c/validationRules/Competitor_Drawing_Reference_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Competitor_Drawing_Reference_Number</fullName>
    <active>true</active>
    <description>If &quot;Competitor_s_Drawing_Attached__c &quot; is Yes then User must enter a value for &quot;Competitor_s_Reference_Number__c&quot;</description>
    <errorConditionFormula>ISPICKVAL(Competitor_s_Drawing_Attached__c  , &quot;Yes&quot;) 

&amp;&amp; 

ISBLANK( Competitor_s_Reference_Number__c )</errorConditionFormula>
    <errorDisplayField>Competitor_s_Reference_Number__c</errorDisplayField>
    <errorMessage>If you are going to upload a competitor&apos;s drawing you must enter the reference for that drawing</errorMessage>
</ValidationRule>