force-app/main/default/objects/Design_Brief__c/validationRules/Delivery_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Delivery_Date_Required</fullName>
    <active>true</active>
    <description>Delivery Date For 24 Sample if Competitors Drawing Attached is yes.</description>
    <errorConditionFormula>AND(ISBLANK(Delivery_Date_For_24_Samples__c),  ISPICKVAL(Competitor_s_Drawing_Attached__c, &quot;Yes&quot;))</errorConditionFormula>
    <errorDisplayField>Delivery_Date_For_24_Samples__c</errorDisplayField>
    <errorMessage>There&apos;s a Competitor&apos;s Drawing attached to this Design Brief, please populate a Delivery Date For 24 Samples before saving.</errorMessage>
</ValidationRule>