force-app/main/default/objects/Design_Brief__c/validationRules/Line_Audit_Responsibility.validationRule-meta.xml
<ValidationRule>
    <fullName>Line_Audit_Responsibility</fullName>
    <active>true</active>
    <description>If a Line Audit Completed Date is blank then define who is responsible for the Line Audit</description>
    <errorConditionFormula>ISBLANK( Line_Audit_Completed_Date__c  )

&amp;&amp; 

ISBLANK( If_No_Line_Audit_Date_Who_Is_Responsible__c )

&amp;&amp; 

!IsAutomationByPassed__c</errorConditionFormula>
    <errorDisplayField>If_No_Line_Audit_Date_Who_Is_Responsible__c</errorDisplayField>
    <errorMessage>If a Line Audit Completed Date is blank then you must define who is responsible for the Line Audit</errorMessage>
</ValidationRule>