force-app/main/default/objects/Design_Brief__c/validationRules/Other_Colour.validationRule-meta.xml
<ValidationRule>
    <fullName>Other_Colour</fullName>
    <active>true</active>
    <description>When &quot;Other&quot; is selected in the Glass_Colour__c field the user must specify the colour in the Other_Colour__c field.</description>
    <errorConditionFormula>TEXT(Glass_Colour__c) = &apos;Other&apos;
&amp;&amp;
ISBLANK(Other_Colour__c)</errorConditionFormula>
    <errorDisplayField>Other_Colour__c</errorDisplayField>
    <errorMessage>When the Glass Colour is &quot;Other&quot; you must specify the colour in the Other (Colour) field.</errorMessage>
</ValidationRule>