force-app/main/default/objects/Design_Brief__c/validationRules/Packaging_spec_must_be_attached.validationRule-meta.xml
<ValidationRule>
    <fullName>Packaging_spec_must_be_attached</fullName>
    <active>true</active>
    <description>If this is an existing container then the user must agree to attach a packaging spec</description>
    <errorConditionFormula>ISPICKVAL(Existing_Packaging_Spec_Attached__c, &quot;No&quot;)</errorConditionFormula>
    <errorDisplayField>Existing_Packaging_Spec_Attached__c</errorDisplayField>
    <errorMessage>If this is an existing container then you must agree to attach the packaging specification immediately.</errorMessage>
</ValidationRule>