force-app/main/default/objects/Design_Brief__c/validationRules/Quality_Standards_Attached.validationRule-meta.xml
<ValidationRule>
    <fullName>Quality_Standards_Attached</fullName>
    <active>true</active>
    <description>If this is a new customer then the user must agree to attach the customer&apos;s Quality Standards immediately</description>
    <errorConditionFormula>ISPICKVAL( Quality_Standards_Attached__c , &quot;No&quot;)</errorConditionFormula>
    <errorDisplayField>Quality_Standards_Attached__c</errorDisplayField>
    <errorMessage>If this is a new customer then you must agree to attach the customer&apos;s Quality Standards immediately</errorMessage>
</ValidationRule>