force-app/main/default/objects/Design_Brief__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NPD_Request__c</columns>
    <columns>NAME</columns>
    <columns>Drawing_Number__c</columns>
    <columns>Design_Brief_Number__c</columns>
    <columns>Stage__c</columns>
    <columns>Account__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>