force-app/main/default/objects/Design_Brief__c/listViews/HF_Brief_Pip_Nut.listView-meta.xml
<ListView>
    <fullName>HF_Brief_Pip_Nut</fullName>
    <columns>NAME</columns>
    <columns>Design_Brief_Number__c</columns>
    <columns>Drawing_Number__c</columns>
    <columns>Set_Number__c</columns>
    <columns>Account__c</columns>
    <columns>Stage__c</columns>
    <columns>Customer_Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Drawing__c</columns>
    <columns>Assigned_to_Design_Team_Member__c</columns>
    <columns>Comments_Notes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account__c</field>
        <operation>equals</operation>
        <value>Pip &amp; Nut</value>
    </filters>
    <label>HF Brief - Pip &amp; Nut</label>
</ListView>